...
    var movieId: Int!

    override func viewDidLoad() {
        super.viewDidLoad()
        
        // Setup View
        navigationItem.title = "Movie"

        // Setup ViewModel
        let viewModel = DetailsViewModel(
            input: DetailsViewModel.Input(
                movieId: movieId
            ),
...
