...
                                    <constraint firstItem="BBg-ng-EOH" firstAttribute="centerY" secondItem="1lW-pt-0xE" secondAttribute="centerY" id="J7R-jd-iby"/>
                                    <constraint firstAttribute="height" constant="32" id="VBX-5e-YXc"/>
                                    <constraint firstItem="BBg-ng-EOH" firstAttribute="leading" secondItem="1lW-pt-0xE" secondAttribute="leading" constant="16" id="VRc-Vb-Zed"/>
                                    <constraint firstAttribute="trailing" secondItem="BBg-ng-EOH" secondAttribute="trailing" constant="16" id="dnN-UW-Eya"/>
                                </constraints>
                            </view>
                            <searchBar contentMode="redraw" placeholder="Titanic, Spider Man, ..." translatesAutoresizingMaskIntoConstraints="NO" id="2Wh-M2-DuU">
                                <rect key="frame" x="0.0" y="91" width="393" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="Boh-gm-kHs"/>
                                </constraints>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done"/>
                                <connections>
...
